# app/Http/Controllers/RegistrationController.php
@@ -16,6 +16,77 @@ class RegistrationController extends Controller
     {
         $this->middleware('jwt.auth');
     }
+
+
+    /**
+     * Register for Meeting
+     * @OA\Post (
+     *     path="/api/v1/meeting/registration",
+     *     tags={"registration"},
+     *     security={{"bearer":{} }},
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                      type="array",
+     *                       @OA\Items(
+     *                      @OA\Property(
+     *                          property="user_id",
+     *                          type="number"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="meeting_id",
+     *                          type="number"
+     *                      ),
+     *                     ),
+     *                 ),
+     *                 example={
+     *                     "user_id":1,
+    *                      "meeting_id":1,
+     *                    }
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="user_id", type="number", example=1),
+     *              @OA\Property(property="meeting_id", type="number", example=1),
+     * 
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="invalid",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="msg", type="string", example="fail"),
+     *          )
+     *      ),
+     *      @OA\Response(
+ *    response=401,
+ *    description="UnAuthorized",
+ *    @OA\JsonContent(
+ *       @OA\Property(property="message", type="string", example="UnAuthanticated"),
+ *    )
+ * ),
+ *  @OA\Response(
+ *    response=500,
+ *    description="Returns when there is server problem",
+ *    @OA\JsonContent(
+ *       @OA\Property(property="message", type="string", example="Server Error"),
+ *    )  
+ * ),
+ *  @OA\Response(
+     *          response=419,
+     *          description="CSRF Token mismatch",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="msg", type="string", example="fail"),
+     *          )
+     *      ),   
+     * )
+    */
     public function store(Request $request)
     {
         $this->validate($request, [
